# pacfiles

./: Cargo.toml  README.md  TODO
src/: build.rs  convert.rs  files.rs  installed.rs  list.rs  main.rs  query_files.rs
