[package]
name = "pacfiles"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
eyre = "*"
tracing = "*"
tracing-subscriber = { version = "*", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"] }

compress-tools = "*"
nu-ansi-term = "*"
tempfile = "*"
